# repo2scroll

./: LICENSE  README.md  pyproject.toml
src/repo2scroll/: __init__.py  main.py
