# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo2scroll"
version = "0.1.0"
authors = [
    { name="Ryutaro YAMAUCHI", email="ryutaro.yamauchi@itoma.ai" },
]
description = "A versatile tool to transform a project repository into a single, scroll-like text file."
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pathspec>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/itomaAI/repo2scroll"
Repository = "https://github.com/itomaAI/repo2scroll"

# This creates the command-line script
[project.scripts]
repo2scroll = "repo2scroll.main:cli_main"

